--- a/miniapp/Makefile
+++ b/miniapp/Makefile
@@ -14,6 +14,7 @@ HPCPROF?=hpcprof
 
 TEST_MPI_PROCESSES?=4
 OMP_NUM_THREADS?=2
+TEST_OMP_NUM_THREADS?=$(OMP_NUM_THREADS)
 TEST_NUM_ELEMENTS?=1000
 TEST_NUM_ITERATIONS?=1000
 
@@ -82,11 +83,11 @@ $(EXE):%.exe:%.c
 # Run app with hpcrun to create measurements file
 # The fair run
 $(HPC_FAIR_MEASUREMENTS): $(EXE)
-	$(MPISPWAN)$(MPISPAWN_ARGS) -np $(TEST_MPI_PROCESSES) $(HPCRUN) $(hpcrun_trace_arg) $(hpc_run_events_arg) -o $@ ./$(EXE) -d fair -n $(TEST_NUM_ELEMENTS) -i $(TEST_NUM_ITERATIONS) -q
+	$(MPISPWAN)$(MPISPAWN_ARGS) -np $(TEST_MPI_PROCESSES) $(HPCRUN) $(hpcrun_trace_arg) $(hpc_run_events_arg) -o $@ ./$(EXE) -t $(TEST_OMP_NUM_THREADS) -d fair -n $(TEST_NUM_ELEMENTS) -i $(TEST_NUM_ITERATIONS) -q
 
 # The unfair run
 $(HPC_UNFAIR_MEASUREMENTS): $(EXE)
-	$(MPISPWAN) $(MPISPAWN_ARGS) -np $(TEST_MPI_PROCESSES) $(HPCRUN) $(hpcrun_trace_arg) $(hpc_run_events_arg) -o $@ ./$(EXE) -d unfair -n $(TEST_NUM_ELEMENTS) -i $(TEST_NUM_ITERATIONS) -q
+	$(MPISPWAN) $(MPISPAWN_ARGS) -np $(TEST_MPI_PROCESSES) $(HPCRUN) $(hpcrun_trace_arg) $(hpc_run_events_arg) -o $@ ./$(EXE) -t $(TEST_OMP_NUM_THREADS) -d unfair -n $(TEST_NUM_ELEMENTS) -i $(TEST_NUM_ITERATIONS) -q
 
 # Inspect executable
 $(HPC_STRUCT): $(EXE)
